[tool.poetry]
name = "pysertive"
version = "0.0.1"
description = ""
homepage = "https://github.com/abeltavares/pysertive"
repository = "https://github.com/abeltavares/pysertive.git"
authors = ["Abel Tavares <abelst9@gmail.com>"]
packages = [{include = "pysertive"}]
readme = "README.md"
keywords = [
    "python",
    "contract-programming",
    "design-by-contract",
    "preconditions",
    "postconditions",
    "invariants",
    "code-quality",
    "code-verification",
    "software-reliability",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-cov = "^2.11"
lxml = "^4.6"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[tool.pytest.ini_options]
testpaths = ["tests"]